--- a/Components/CreateConfiguration/DeviceConfiguration.xaml
+++ b/Components/CreateConfiguration/DeviceConfiguration.xaml
@@ -10,6 +10,13 @@
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800"
              FontSize="16">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../../resources/EnglishLocalization.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid Margin="40 20 40 10">
         <Grid.RowDefinitions>
             <RowDefinition />
@@ -31,125 +38,133 @@
 
         <Label
             Grid.Row="0"
-            Content="Device characteristics"
+            Content="{StaticResource DeviceCharacteristicsHeading}"
             Style="{StaticResource HeadingLabelStyle}" />
         <Label
             Grid.Row="1"
-            Content="Humidifire"
+            Content="{StaticResource HumidifierLabel}"
             Style="{StaticResource HeadingLabelStyle}" />
 
         <Label
             Grid.Row="2"
-            Content="Water Consumption"
+            Content="{StaticResource WaterConsumptionLabel}"
             Style="{StaticResource DescriptionLabelStyle}" />
         <components:PlaceholderTextBox
             Grid.Row="2"
             Margin="20 0 0 0"
-            Placeholder="Enter some number..."
-            x:Name="WaterConsumptionTextBox"
+            Placeholder="{StaticResource NumberPlaceholder}"
             Style="{StaticResource PlaceholderTextBoxStyle}"
             Text="{Binding HumidifierWaterConsumption}" />
 
         <Label
             Grid.Row="3"
-            Content="Device Mode"
+            Content="{StaticResource DeviceModeLabel}"
             Style="{StaticResource DescriptionLabelStyle}" />
         <RadioButton Grid.Row="3"
                      GroupName="HumidifierRadioButtons"
                      HorizontalAlignment="Right"
                      Margin="0 10 60 0"
-                     Content="On"
+                     Content="{StaticResource OnLabel}"
                      IsChecked="{Binding HumidifierStatus}"/>
         <RadioButton Grid.Row="3" GroupName="HumidifierRadioButtons" HorizontalAlignment="Right" Margin="0 10 0 0"
-                     Content="Off"
+                     Content="{StaticResource OffLabel}"
                      IsChecked="{Binding HumidifierStatus, Converter={StaticResource RadioButtonCheckedConverter}}"/>
-        <Button Grid.Row="4" Style="{StaticResource ButtonStyle}" HorizontalAlignment="Right" Content="Add humidifier"
+        <Button Grid.Row="4" 
+                Style="{StaticResource ButtonStyle}" 
+                HorizontalAlignment="Right" 
+                Content="{StaticResource AddHumidifierButtonLabel}"
                 Command="{Binding AddHumidifierCommand}" />
 
         <Label
             Grid.Row="5"
-            Content="Purificator"
+            Content="{StaticResource PurificatorLabel}"
             Style="{StaticResource HeadingLabelStyle}" />
         <Label
             Grid.Row="6"
-            Content="AirFlow"
+            Content="{StaticResource AirFlowLabel}"
             Style="{StaticResource DescriptionLabelStyle}" />
         <components:PlaceholderTextBox
             Grid.Row="6"
-            Placeholder="Enter some number..."
-            x:Name="PurificatorAirFlowTextBox"
+            Placeholder="{StaticResource NumberPlaceholder}"
             Style="{StaticResource PlaceholderTextBoxStyle}"
             Text="{Binding PurificatorAirFlow}" />
 
         <Label
             Grid.Row="7"
-            Content="Device Mode"
+            Content="{StaticResource DeviceModeLabel}"
             Style="{StaticResource DescriptionLabelStyle}" />
         <RadioButton
             Grid.Row="7"
             GroupName="PurificatorRadioButtons"
             HorizontalAlignment="Right"
             Margin="0 10 60 0"
-            Content="On"
+            Content="{StaticResource OnLabel}"
             IsChecked="{Binding PurificatorStatus}" />
         <RadioButton
             Grid.Row="7"
             GroupName="PurificatorRadioButtons"
             HorizontalAlignment="Right"
             Margin="0 10 0 0"
-            Content="Off"
+            Content="{StaticResource OffLabel}"
             IsChecked="{Binding PurificatorStatus, Converter={StaticResource RadioButtonCheckedConverter}}" />
 
-        <Button Grid.Row="8" Style="{StaticResource ButtonStyle}" Content="Add purificator"
-                Command="{Binding AddPurificatorCommand}" HorizontalAlignment="Right" />
+        <Button Grid.Row="8" 
+                Style="{StaticResource ButtonStyle}" 
+                Content="{StaticResource AddPurificatorButtonLabel}"
+                Command="{Binding AddPurificatorCommand}" 
+                HorizontalAlignment="Right" />
         <Label
             Grid.Row="9"
-            Content="Conditioner"
+            Content="{StaticResource ConditionerLabel}"
             Style="{StaticResource HeadingLabelStyle}" />
 
         <Label
             Grid.Row="10"
-            Content="Air Flow"
+            Content="{StaticResource AirFlowLabel}"
             Style="{StaticResource DescriptionLabelStyle}" />
         <components:PlaceholderTextBox
             Grid.Row="10"
-            Placeholder="Enter some number..."
-            x:Name="ConditionerAirFlowTextBox"
+            Placeholder="{StaticResource NumberPlaceholder}"
             Style="{StaticResource PlaceholderTextBoxStyle}"
             Text="{Binding ConditionerAirFlow}" />
 
         <Label
             Grid.Row="11"
-            Content="Conditioner Temperature"
+            Content="{StaticResource ConditionerTemperatureLabel}"
             Style="{StaticResource DescriptionLabelStyle}" />
         <components:PlaceholderTextBox
             Grid.Row="11"
-            Placeholder="Enter some number..."
-            x:Name="ConditionerTemperatureTextBox"
+            Placeholder="{StaticResource NumberPlaceholder}"
             Style="{StaticResource PlaceholderTextBoxStyle}"
             Text="{Binding ConditionerTemperature}" />
 
         <Label
             Grid.Row="12"
-            Content="Conditioner Mode"
+            Content="{StaticResource ConditionerModelLabel}"
             Style="{StaticResource DescriptionLabelStyle}" />
-        <ComboBox Grid.Row="12" x:Name="ConditionerModeComboBox"
+        <ComboBox Grid.Row="12" 
                   Style="{StaticResource ComboBoxStyle}"
                   SelectedValue="{Binding ConditionerMode, Converter={StaticResource EnumConverter}, ConverterParameter={x:Type local:ConditionerMode}}"
                   ItemsSource="{Binding Source={local:EnumToItemsSource {x:Type local:ConditionerMode}}}" />
-
+        
         <Label
             Grid.Row="13"
-            Content="Device Mode"
+            Content="{StaticResource DeviceModeLabel}"
             Style="{StaticResource DescriptionLabelStyle}"/>
-        <RadioButton Grid.Row="13" GroupName="ConditionerRadioButtons" HorizontalAlignment="Right" Margin="0 10 60 0"
-                     Content="On"
+        <RadioButton Grid.Row="13" 
+                     GroupName="ConditionerRadioButtons" 
+                     HorizontalAlignment="Right" 
+                     Margin="0 10 60 0"
+                     Content="{StaticResource OnLabel}"
                      IsChecked="{Binding ConditionerStatus}"/>
         <RadioButton Grid.Row="13" GroupName="ConditionerRadioButtons" HorizontalAlignment="Right" Margin="0 10 0 0"
-                     Content="Off"
+                     Content="{StaticResource OffLabel}"
                      IsChecked="{Binding ConditionerStatus, Converter={StaticResource RadioButtonCheckedConverter}}" />
 
-        <Button Grid.Row="14" Style="{StaticResource ButtonStyle}" HorizontalAlignment="Right"
-                Content="Add conditioner" Command="{Binding AddConditionerCommand}" />
+        <Button Grid.Row="14" 
+                Style="{StaticResource ButtonStyle}" 
+                HorizontalAlignment="Right"
+                Content="{StaticResource AddConditionerButtonLabel}" 
+                Command="{Binding AddConditionerCommand}" />
     </Grid>
 </UserControl>
