--- a/ui/Views/ConditionerDetailsEditView.xaml
+++ b/ui/Views/ConditionerDetailsEditView.xaml
@@ -11,22 +11,29 @@
              mc:Ignorable="d"
              d:DesignWidth="400"
              FontSize="14">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../../resources/EnglishLocalization.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid Width="400" Height="400" Background="White">
 
         <Button Content="X" Margin="20" VerticalAlignment="Top" HorizontalAlignment="Right" Padding="10 5"
                 Command="{Binding CloseModalCommand}">
         </Button>
         <StackPanel Margin="20" VerticalAlignment="Center">
-            <TextBlock HorizontalAlignment="Center" Text="Edit conditioner details" FontSize="20"></TextBlock>
+            <TextBlock HorizontalAlignment="Center" Text="{StaticResource WaterConsumptionLabel}" FontSize="20"></TextBlock>
             <Grid Margin="0 20 0 0 ">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <TextBlock Text="Working temperature"></TextBlock>
+                <TextBlock Text="{StaticResource WorkingTemperatureLabel}"></TextBlock>
                 <components:PlaceholderTextBox Grid.Column="1" Padding="5" HorizontalContentAlignment="Center"
                                                Text="{Binding WorkingTemperature}"
-                                               Placeholder="Enter working temperature..." />
+                                               Placeholder="{StaticResource EnterWorkingTemperaturePlaceholder}" />
             </Grid>
 
             <Grid Margin="0 20 0 0">
@@ -34,8 +41,8 @@
                     <ColumnDefinition />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <TextBlock Text="Conditioner Mode"></TextBlock>
-                <ComboBox Grid.Column="1" x:Name="ConditionerModeComboBox"
+                <TextBlock Text="{StaticResource ConditionerModelLabel}"></TextBlock>
+                <ComboBox Grid.Column="1" 
                           Height="30" HorizontalContentAlignment="Center"
                           SelectedValue="{Binding Mode, Converter={StaticResource EnumConverter}, ConverterParameter={x:Type climateControlSystemNamespace:ConditionerMode}}"
                           ItemsSource="{Binding Source={climateControlSystemNamespace:EnumToItemsSource {x:Type climateControlSystemNamespace:ConditionerMode}}}" />
@@ -45,16 +52,16 @@
                     <ColumnDefinition />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <TextBlock Text="Conditioner Status"></TextBlock>
+                <TextBlock Text="{StaticResource IsOnLabel}"></TextBlock>
                 <RadioButton Grid.Column="1"
                              GroupName="ConditionerRadioButtons"
                              HorizontalAlignment="Right"
                              Margin="0 10 60 0"
-                             Content="On"
+                             Content="{StaticResource OnLabel}"
                              IsChecked="{Binding Status}" />
                 <RadioButton Grid.Column="1" GroupName="ConditionerRadioButtons" HorizontalAlignment="Right"
                              Margin="0 10 0 0"
-                             Content="Off"
+                             Content="{StaticResource OffLabel}"
                              IsChecked="{Binding Status, Converter={StaticResource RadioButtonCheckedConverter}}" />
             </Grid>
             <Grid Margin="0 20 0 0">
@@ -63,7 +70,7 @@
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
             </Grid>
-            <Button HorizontalAlignment="Center" Content="Confirm" Padding="35 10"
+            <Button HorizontalAlignment="Center" Content="{StaticResource ConfirmButtonLabel}" Padding="35 10"
                     Command="{Binding ConfirmEditCommand}">
             </Button>
         </StackPanel>
