--- a/ui/Views/HumidifierDetailsEditView.xaml
+++ b/ui/Views/HumidifierDetailsEditView.xaml
@@ -9,6 +9,13 @@
              mc:Ignorable="d"
              d:DesignWidth="400"
              FontSize="14">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../../resources/EnglishLocalization.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid Width="400" Height="400">
 
         <Button Content="X" Margin="20" VerticalAlignment="Top" HorizontalAlignment="Right" Padding="10 5"
@@ -16,22 +23,22 @@
         </Button>
         <StackPanel Margin="20" VerticalAlignment="Center">
 
-            <TextBlock HorizontalAlignment="Center" Text="Edit humidifier details" FontSize="20"></TextBlock>
+            <TextBlock HorizontalAlignment="Center" Text="{StaticResource EditHumidifierDetailsHeading}" FontSize="20"></TextBlock>
 
             <Grid Margin="0 20 0 0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <TextBlock Text="Humidifier Status"></TextBlock>
+                <TextBlock Text="{StaticResource IsOnLabel}"></TextBlock>
                 <RadioButton Grid.Column="1"
                     GroupName="HumidifierRadioButtons"
                     HorizontalAlignment="Right"
                     Margin="0 10 60 0"
-                    Content="On"
+                    Content="{StaticResource OnLabel}"
                     IsChecked="{Binding Status}"/>
                 <RadioButton Grid.Column="1" GroupName="HumidifierRadioButtons" HorizontalAlignment="Right" Margin="0 10 0 0"
-                             Content="Off"
+                             Content="{StaticResource OffLabel}"
                              IsChecked="{Binding Status, Converter={StaticResource RadioButtonCheckedConverter}}" />
             </Grid>
             <Grid Margin="0 20 0 0">
@@ -40,7 +47,7 @@
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
             </Grid>
-            <Button HorizontalAlignment="Center" Content="Confirm" Padding="35 10"
+            <Button HorizontalAlignment="Center" Content="{StaticResource ConfirmButtonLabel}" Padding="35 10"
                     Command="{Binding ConfirmEditCommand}">
             </Button>
         </StackPanel>
