--- a/ui/Views/HumidifierDetailsView.xaml
+++ b/ui/Views/HumidifierDetailsView.xaml
@@ -8,6 +8,13 @@
       d:DataContext="{d:DesignInstance Type=viewmodels:HumidifierDetailsViewModel}"
       mc:Ignorable="d"
       Height="450" Width="800">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../../resources/EnglishLocalization.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid>
 
         <Grid.ColumnDefinitions>
@@ -21,7 +28,7 @@
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" FontSize="32" Text="Humidifier" />
+        <TextBlock Grid.Row="0" FontSize="32" Text="{StaticResource HumidifierLabel}" />
 
         <Grid Grid.Row="1" Margin="0 10 0 0 ">
             <Grid>
@@ -40,7 +47,7 @@
                     Grid.Column="0"
                     Grid.Row="0"
                     VerticalAlignment="Center"
-                    Text="Water consumption" />
+                    Text="{StaticResource WaterConsumptionLabel}" />
 
                 <TextBox
                     Grid.Row="0"
@@ -56,7 +63,8 @@
                     Grid.Row="2"
                     Grid.Column="0"
                     VerticalAlignment="Center"
-                    Text="Is on?" />
+                    Text="{StaticResource IsOnLabel}" />
+                
                 <TextBox Grid.Row="2" Grid.Column="1"
                          IsReadOnly="True"
                          HorizontalAlignment="Left"
@@ -64,7 +72,12 @@
                          Style="{StaticResource DetailsTextBoxStyle}"
                          Text="{Binding HumidifierStatus, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
                 
-                <Button Grid.Row="3" Grid.Column="1" Command="{Binding EditCommand}" HorizontalAlignment="Right" MinHeight="30" MinWidth="100" Content="Edit" Margin="20 10 0 0"></Button>
+                <Button Grid.Row="3" Grid.Column="1" Command="{Binding EditCommand}" 
+                        HorizontalAlignment="Right" 
+                        MinHeight="30" 
+                        MinWidth="100" 
+                        Content="{StaticResource EditButtonLabel}" 
+                        Margin="20 10 0 0"/>
             </Grid>
         </Grid>
     </Grid>
