--- a/ui/Views/RoomDetailsView.xaml
+++ b/ui/Views/RoomDetailsView.xaml
@@ -4,22 +4,29 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewmodel="clr-namespace:ClimateControlSystem.ui.ViewModel.ClimateControlSystem"
+             xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              d:DataContext="{d:DesignInstance Type=viewmodel:RoomDetailsViewModel}"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800"
              FontSize="14">
-
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../../resources/EnglishLocalization.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" FontSize="32" Text="Room" />
+        <TextBlock Grid.Row="0" FontSize="32" Text="{StaticResource RoomLabel}" />
 
         <Grid Grid.Row="1" Margin="0 10 0 0 ">
             <Grid>
@@ -42,7 +49,7 @@
                     Grid.Column="0"
                     Grid.Row="0"
                     VerticalAlignment="Center"
-                    Text="Temperature" />
+                    Text="{StaticResource TemperatureLabel}" />
 
                 <TextBox
                     Grid.Row="0"
@@ -58,7 +65,8 @@
                     Grid.Row="1"
                     Grid.Column="0"
                     VerticalAlignment="Center"
-                    Text="Humidity" />
+                    Text="{StaticResource HumidityLabel}" />
+                
                 <TextBox
                     Grid.Row="1"
                     Grid.Column="1"
@@ -67,93 +75,90 @@
                     Margin="20 10 0 0"
                     Style="{StaticResource DetailsTextBoxStyle}"
                     Text="{Binding Humidity, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                
                 <TextBlock
                     Grid.Row="2"
                     Grid.Column="0"
                     VerticalAlignment="Center"
-                    Text="Carbon Dioxide" />
+                    Text="{StaticResource CarbonDioxideLabel}" />
+                
                 <TextBox
                     Grid.Row="2"
                     Grid.Column="1"
                     IsReadOnly="True"
                     HorizontalAlignment="Left"
                     Margin="20 10 0 0"
-
                     Style="{StaticResource DetailsTextBoxStyle}"
                     Text="{Binding CarbonDioxideLevel, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                
                 <TextBlock
                     Grid.Row="3"
                     Grid.Column="0"
                     VerticalAlignment="Center"
-                    Text="Light Level" />
+                    Text="{StaticResource LightLevelLabel}" />
+                
                 <TextBox
                     Grid.Row="3"
                     Grid.Column="1"
                     IsReadOnly="True"
                     HorizontalAlignment="Left"
                     Margin="20 10 0 0"
-
                     Style="{StaticResource DetailsTextBoxStyle}"
                     Text="{Binding LightLevel, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                
                 <TextBlock
                     Grid.Row="4"
                     Grid.Column="0"
                     VerticalAlignment="Center"
-                    Text="Expected temperature" />
+                    Text="{StaticResource ExpectedTemperatureLabel}" />
+                
                 <TextBox
                     Grid.Row="4"
                     Grid.Column="1"
                     IsReadOnly="True"
                     HorizontalAlignment="Left"
                     Margin="20 10 0 0"
-
                     Style="{StaticResource DetailsTextBoxStyle}"
                     Text="{Binding ExpectedTemperature, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                
                 <TextBlock
                     Grid.Row="5"
                     Grid.Column="0"
                     VerticalAlignment="Center"
-                    Text="Expected humidity" />
+                    Text="{StaticResource ExpectedHumidityLabel}" />
+                
                 <TextBox
                     Grid.Row="5"
                     Grid.Column="1"
                     IsReadOnly="True"
                     HorizontalAlignment="Left"
                     Margin="20 10 0 0"
-
                     Style="{StaticResource DetailsTextBoxStyle}"
                     Text="{Binding ExpectedHumidity, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                
                 <TextBlock
                     Grid.Row="6"
                     Grid.Column="0"
                     VerticalAlignment="Center"
-                    Text="Expected CD level" />
+                    Text="{StaticResource ExpectedCarbonDioxideLabel}" />
+                
                 <TextBox
                     Grid.Row="6"
                     Grid.Column="1"
                     IsReadOnly="True"
                     HorizontalAlignment="Left"
                     Margin="20 10 0 0"
-
                     Style="{StaticResource DetailsTextBoxStyle}"
                     Text="{Binding ExpectedCarbonDioxide, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                
                 <Button Grid.Row="7" Grid.Column="1" Command="{Binding EditCommand}" HorizontalAlignment="Right"
-                        MinHeight="30" MinWidth="100" Content="Edit" Margin="20 10 0 0" />
+                        MinHeight="30" MinWidth="100" Content="{StaticResource EditButtonLabel}" Margin="20 10 0 0" />
             </Grid>
         </Grid>
-        <Canvas Grid.Column="1" Grid.RowSpan="2" Width="450" Height="300" HorizontalAlignment="Right">
-            <Polyline
-                Points="{Binding TemperaturePoints}"
-                Stroke="DodgerBlue"
-                StrokeThickness="2" />
-            <Polyline
-                Points="{Binding HumidityPoints}"
-                Stroke="Coral"
-                StrokeThickness="2" />
-            <Polyline
-                Points="{Binding CarbonDioxidePoints}"
-                Stroke="Indigo"
-                StrokeThickness="2" />
-        </Canvas>
+        <lvc:CartesianChart Grid.Row="1" Grid.Column="1" Series="{Binding SeriesCollection}">
+            <lvc:CartesianChart.AxisX>
+                <lvc:Axis Title="{StaticResource TimeLabel}" Labels="{Binding Axis}"></lvc:Axis>
+            </lvc:CartesianChart.AxisX>
+        </lvc:CartesianChart>
     </Grid>
 </UserControl>
